GG-48948 Add standalone multi-module pom.xml for gg8-examples (#5)